update for version2 images

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -23,7 +23,7 @@
                 <input type="text" class="form-control" name="s"
                        placeholder="Enter name..." />
             </div>
-            <button type="submit" class="btn btn-danger">Search</button>
+            <button type="submit" class="btn btn-danger">LookFor</button>
         </form>
     </div>
     <th:block th:if="${#lists.isEmpty(employees)}">
